WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240631
REGRESSION (
r294291
): Nullptr crash with :first-letter
https://bugs.webkit.org/show_bug.cgi?id=240631
Summary
REGRESSION (r294291): Nullptr crash with :first-letter
Antti Koivisto
Reported
2022-05-19 00:34:48 PDT
<style> body { column-count: 2; } ::first-letter { width: 0; } </style> <script> onload = () => { document.execCommand('SelectAll'); document.designMode = 'on'; document.execCommand('Indent'); }; </script> aa
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-05-19 00:36:46 PDT
rdar://93495868
Antti Koivisto
Comment 2
2022-05-19 01:03:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/768
EWS
Comment 3
2022-05-19 08:47:03 PDT
Committed
r294485
(
250744@main
): <
https://commits.webkit.org/250744@main
> Reviewed commits have been landed. Closing PR #768 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug