REGRESSION (r294291): Nullptr crash with :first-letter https://bugs.webkit.org/show_bug.cgi?id=240631 <rdar://93495868>

Reviewed by Alan Bujtas.

Test: fast/css/first-letter-multicol-crash.html

* Source/WebCore/rendering/RenderObject.h:
* Source/WebCore/rendering/updating/RenderTreeBuilderFirstLetter.cpp:

With multicol there can be multiple levels of anonymous ancestors. Search for the
nearest non-anonymous ancestor to find the first-letter style.

(WebCore::styleForFirstLetter):
* LayoutTests/fast/css-generated-content/first-letter-in-nested-before-table-expected.html:

Update expected results. The new results match Chrome behavior.

* LayoutTests/fast/css/first-letter-multicol-crash-expected.txt: Added.
* LayoutTests/fast/css/first-letter-multicol-crash.html: Added.

Canonical link: https://commits.webkit.org/250744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294485 268f45cc-cd09-0410-ab3c-d52691b4dbfc